--- a/Prison Digital/src/UI/Prison/PrisonGuardJPanel.form
+++ b/Prison Digital/src/UI/Prison/PrisonGuardJPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -81,7 +81,7 @@
           <Font name="Tahoma" size="24" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Prison Guard Work Area"/>
+        <Property name="text" type="java.lang.String" value="Security Supervisor Work Area"/>
         <Property name="opaque" type="boolean" value="true"/>
       </Properties>
     </Component>
